* Fixed bug with truncating the text for stash items * Fixed bug with the draggable cursor

--- a/src/styles/_draggable.scss
+++ b/src/styles/_draggable.scss
@@ -11,3 +11,8 @@
   cursor: -moz-grabbing;
   cursor: -webkit-grabbing;
 }
+
+/* For clicking */
+.clickable {
+  cursor: pointer;
+}
